# ChangeLog for games-arcade/marbleblast-demo
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/marbleblast-demo/ChangeLog,v 1.4 2006/09/19 18:56:41 wolf31o2 Exp $

  19 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  marbleblast-demo-1.3.ebuild:
  Adding strip to RESTRICT for bug #137819.

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  marbleblast-demo-1.3.ebuild:
  Fixed marbleblastdemo/marbleblast-demo thanks to stupid epkgmove.

*marbleblast-demo-1.3 (13 Apr 2006)

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> +metadata.xml,
  +marbleblast-demo-1.3.ebuild:
  Moved from games-arcade/marbleblastdemo to games-arcade/marbleblast-demo.

  21 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  marbleblastdemo-1.3.ebuild:
  Changed check_license to explicitly list license to check.

  11 Aug 2005; Olivier Crête <tester@gentoo.org>
  marbleblastdemo-1.3.ebuild:
  Marked ~amd64, closes bug #102167, thanks to meetra for testing

*marbleblastdemo-1.3 (07 Oct 2003)

  07 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.