@@ -1,4 +1,4 @@
 DIST MarbleBlastDemo-1.3.sh.bin 10800892 RMD160 c2b54e5906c80489ba5202e01225546e036ee72e SHA1 e911a072b17ea828e1dc210d1ab6010742f15615 SHA256 84d547df84ce2fdc82eb0316ff737d4ae1b1bf50ce4541870847b51de6bfd1a4
-EBUILD marbleblast-demo-1.3.ebuild 947 RMD160 f921f09e4126d44ec7b5988455b02e303c99e22b SHA1 b76f6a9a9d44f20afc621603fdfeac5b8fda4dc8 SHA256 f74e3716e788476ce8f29ec8c278ddef814d4b71e8cc006686bef40181691f09
-MISC ChangeLog 1156 RMD160 aa3c4987f15a70f162bc4de148d7844026645bcc SHA1 f7bf21658b34bb3c27c72c648cd166d3b23b494b SHA256 21f1e2e60e275e14e56ee2e6bb97bf96bd8682bfb360f532379e4b504ad481fb
+EBUILD marbleblast-demo-1.3.ebuild 960 RMD160 dcb2a49f2da57a3be5b38ef8ccabc8d022e50e49 SHA1 40e971290986207de2b57159aebfeff505f81b25 SHA256 468f233e16d1fcac143ea11400a5f4f4a9dbba3143489069d0f7709b02fbb0d5
+MISC ChangeLog 1262 RMD160 b58d1166b9b9931657e14743650d85aa7cd7464d SHA1 43f4f9de99b63fa8d414b5a7fce7b0eb4a60c084 SHA256 6bfd0c13fdfd53fcf385e3c8917b5e464cbe5fc811de25a3b53dda61fcfe9220
 MISC metadata.xml 1378 RMD160 35294390c1bdfc0519d080ec213a721980d63e52 SHA1 89bd9f81d99b212f51a42014ee304938be8b4dc7 SHA256 c37cbb7e8b2ebc1664d6f146f552c0342295e4165e66eac4941d12171139f061
