@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/marbleblast-demo/marbleblast-demo-1.3.ebuild,v 1.4 2006/09/19 18:56:41 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/marbleblast-demo/marbleblast-demo-1.3.ebuild,v 1.5 2009/02/01 21:40:28 mr_bones_ Exp $
 
 inherit eutils games
 
@@ -25,13 +25,13 @@ src_unpack() {
 
 src_install() {
 	local dir=${GAMES_PREFIX_OPT}/${PN}
-	dodir ${dir} ${GAMES_BINDIR}
+	dodir "${dir}" "${GAMES_BINDIR}"
 
-	tar -zxf MarbleBlast.tar.gz -C ${D}/${dir} || die "extracting MarbleBlast.tar.gz"
+	tar -zxf MarbleBlast.tar.gz -C "${D}/${dir}" || die "extracting MarbleBlast.tar.gz"
 
-	exeinto ${dir}
+	exeinto "${dir}"
 	doexe bin/Linux/x86/marbleblastdemo
-	dosym ${dir}/marbleblastdemo ${GAMES_BINDIR}/marbleblast-demo
+	dosym "${dir}"/marbleblastdemo "${GAMES_BINDIR}"/marbleblast-demo
 
 	dodoc README_DEMO.txt
 
