@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/marbleblast-demo
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/marbleblast-demo/ChangeLog,v 1.4 2006/09/19 18:56:41 wolf31o2 Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/marbleblast-demo/ChangeLog,v 1.5 2009/02/01 21:40:28 mr_bones_ Exp $
+
+  01 Feb 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  marbleblast-demo-1.3.ebuild:
+  quote variables
 
   19 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   marbleblast-demo-1.3.ebuild:
